compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_constructor_pattern_discard_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1344
expression: "pub type Box { Box(Int) } pub fn main() { let Box(_ignoredInner) = Box(203)}"
snapshot_kind: text
---
----- SOURCE CODE
pub type Box { Box(Int) } pub fn main() { let Box(_ignoredInner) = Box(203)}

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:51
  │
1 │ pub type Box { Box(Int) } pub fn main() { let Box(_ignoredInner) = Box(203)}
  │                                                   ^^^^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _ignored_inner
